# snowblind

./: CITATION.cff  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  publish.yml
docs/: conf.py
src/snowblind/: __init__.py  jump_plus.py  persist.py  rc_cross.py  rc_selfcal.py  selfcal.py  snowblind.py
tests/: conftest.py  test_jump_plus.py  test_persist.py  test_rc_selfcal.py  test_selfcal.py  test_snowblind.py
