[project]
name = "snowblind"
authors = [{name = "James Davies", email = "jdavies@mpia.de"}]
description = "Mask cosmic ray showers (snowballs) in JWST data"
readme = "README.md"
license = { file = 'LICENSE' }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "jwst",
    "numpy",
    "scikit-image",
    "stpipe",
]
dynamic = ['version']

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-automodapi",
    "numpydoc",
]
test = [
    "pytest",
    "flake8",
    "flake8-pyproject",
    "codecov",
    "pytest-cov",
]

[project.entry-points]
"stpipe.steps" ={jwst = "snowblind:_get_steps"}

[project.urls]
"Bug Tracker" = "https://github.com/mpi-astronomy/snowblind/issues"
"Source Code" = "https://github.com/mpi-astronomy/snowblind"


[build-system]
requires = [
    "setuptools>=60",
    "setuptools_scm[toml] >=3.4",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/snowblind/_version.py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.flake8]
max-line-length = 130
exclude = [
    'docs',
    '.tox',
    '.eggs',
    'build',
    '*_version.py',
]
