[metadata]
name = snowblind
version = 0.0.1
author = James Davies
author_email = jdavies@mpia.de
description = Mask cosmic ray showers (snowballs) in JWST data
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_file = LICENSE
url = https://github.com/mpi-astronomy/snowblind
project_urls =
    Bug Tracker = https://github.com/mpi-astronomy/snowblind/issues
    Source Code = https://github.com/mpi-astronomy/snowblind
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires= >=3.8
install_requires =
    importlib-metadata >= 2.0 ; python_version < "3.8"
    scikit-image
    numpy
    stpipe

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx-automodapi
    numpydoc
test =
    pytest
    flake8
    codecov
    pytest-cov

[options.entry_points]
stpipe.steps =
    jwst = snowblind:_get_steps
